# telemt-monthly

./: .gitignore  Makefile  README.md  pyproject.toml  telemt-monthly.py  telemt-monthly.sh  telemt_monthly.py  test_telemt_monthly.py
.github/workflows/: ci.yml
