[project]
name = "telemt-monthly"
version = "0.1.0"
description = "Monthly per-user traffic billing with Google Sheets integration"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
